# sbi-vishwas

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  docker-compose.yml.bak  sbi-vishwas-final-idea.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/: __init__.py
backend/src/adapters/: __init__.py  cbs_adapter.py
backend/src/agents/: __init__.py
backend/src/agents/base/: __init__.py  agent_base.py
backend/src/agents/graph/: __init__.py  graph_builder.py  state.py
backend/src/agents/knowledge/: __init__.py  ingestion.py  rag_engine.py  retrieval.py
backend/src/agents/memory/: __init__.py  core.py  long_term.py  semantic.py  setup.py
backend/src/agents/phase_a/: __init__.py  escalation_advocate.py  journey_tracker.py  policy_compliance.py  proactive_communication.py
backend/src/agents/phase_b/: __init__.py  diagnosis.py  readiness.py
backend/src/agents/providers/: __init__.py  provider_factory.py
backend/src/agents/tools/: __init__.py  cbs.py  communication.py  core.py  knowledge.py
backend/src/api/: __init__.py  main.py
backend/src/api/routers/: __init__.py  agents.py  approvals.py  audit.py  auth.py  complaints.py  conversations.py  customers.py  health.py  knowledge.py  notifications.py  workflows.py
backend/src/auth/: __init__.py  encryption.py  jwt.py  middleware.py  rbac.py
backend/src/config/: __init__.py  constants.py  observability.py  settings.py
backend/src/database/: __init__.py  base.py  engine.py  seed.py  vector_store.py
backend/src/database/migrations/: env.py
backend/src/database/models/: __init__.py  account.py  complaint.py  conversation.py  customer.py  domain.py  user.py  workflow.py
backend/src/workflows/: __init__.py  celery_app.py
backend/src/workflows/tasks/: __init__.py  complaint_sla_monitor.py  dormancy_scanner.py  knowledge_sync.py  memory_maintenance.py  notification_dispatcher.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/approvals/: page.tsx
frontend/src/app/customers/: page.tsx
frontend/src/app/judge/: layout.tsx  page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/memory/: page.tsx
frontend/src/app/policy/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/app/workflows/[id]/: WorkflowClient.tsx  page.tsx
frontend/src/components/ai/: AgentExecutionGraph.tsx  ReasoningTimeline.tsx
frontend/src/components/judge/: HolographicBrain.tsx
frontend/src/components/judge/scenes/: Scene0_Opening.tsx  Scene1_Problem.tsx  Scene2_Awakening.tsx  Scene3_Reasoning.tsx  Scene4_Advocacy.tsx  Scene5_Judge.tsx  Scene6_Impact.tsx
frontend/src/components/layout/: AppSidebar.tsx  CommandCenterLayout.tsx  JudgeModePanel.tsx
frontend/src/hooks/: useJudgeScenario.ts
infra/prometheus/: prometheus.yml
